# sp1

./: Cargo.toml
cli/: Cargo.toml
cli/src/commands/: new.rs  prove.rs
core/: Cargo.toml
core/src/: io.rs  lib.rs
core/src/alu/: mod.rs
core/src/alu/divrem/: mod.rs
core/src/lookup/: debug.rs
core/src/precompiles/poseidon2/internal/: columns.rs  internal_linear_permute.rs  mod.rs
core/src/precompiles/secp/: ed_add.rs
core/src/precompiles/sha256/compress/: mod.rs
core/src/precompiles/sha256/extend/: mod.rs  trace.rs
core/src/program/: mod.rs
core/src/runtime/: mod.rs  syscall.rs
core/src/stark/: machine.rs  permutation.rs  prover.rs  quotient.rs  runtime.rs  types.rs  verifier.rs
core/src/syscall/precompiles/k256/: decompress.rs
core/src/syscall/precompiles/keccak256/: trace.rs
core/src/syscall/precompiles/weierstrass/: weierstrass_double.rs
core/src/utils/: prove.rs  tracer.rs
dev/bench/: data.js
examples/book/program/: Cargo.toml
examples/book/program/elf/: riscv32im-succinct-zkvm-elf
examples/book/program/src/: main.rs
examples/book/script/: Cargo.toml
examples/book/script/src/: book.json  main.rs
examples/ed25519/: Cargo.toml
examples/ed25519/src/: main.rs
examples/fibonacci-io/program/elf/: riscv32im-succinct-zkvm-elf
examples/fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
examples/fibonacci/program/src/: main.rs
examples/fibonacci/script/: Cargo.toml
examples/fibonacci/script/src/: main.rs
examples/rsa/program/elf/: riscv32im-succinct-zkvm-elf
examples/sha2/: Cargo.toml
examples/sha2/src/: main.rs
examples/ssz-withdrawals/program/elf/: riscv32im-succinct-zkvm-elf
examples/tendermint/: Cargo.toml  input.json
examples/tendermint/program/: Cargo.toml
examples/tendermint/program/elf/: riscv32im-succinct-zkvm-elf
examples/tendermint/program/src/: main.rs
examples/tendermint/script/: Cargo.toml
examples/tendermint/script/src/: main.rs
examples/tendermint/src/: main.rs
examples/verifier/program/: Cargo.toml
examples/verifier/program/elf/: riscv32im-succinct-zkvm-elf
examples/verifier/program/src/: main.rs
examples/verifier/program/src/fixtures/: fib-proof-with-pis.json
programs/babybear-add/: Cargo.toml
programs/babybear-add/elf/: riscv32im-succinct-zkvm-elf
programs/babybear-add/src/: main.rs
programs/cycle-tracker/elf/: riscv32im-succinct-zkvm-elf
programs/poseidon2/: Cargo.toml
programs/poseidon2/elf/: riscv32im-succinct-zkvm-elf
programs/poseidon2/src/: main.rs
programs/verifier/: Cargo.toml
programs/verifier/data/proofs/: segment_proofs.bytes
programs/verifier/src/: verifier.rs
prover/: Cargo.toml
prover/scripts/: e2e.rs
prover/src/: lib.rs  types.rs
recursion/compiler/src/asm/: compiler.rs
recursion/compiler/src/ir/: builder.rs  collections.rs  mod.rs  types.rs
recursion/compiler/src/verifier/: folder.rs  mod.rs
recursion/compiler/src/verifier/constraints/: domain.rs  mod.rs
recursion/compiler/src/verifier/fri/: mod.rs  pcs.rs  utils.rs
recursion/compiler/tests/: for_loops.rs  fri.rs  pcs.rs
recursion/core/src/air/: builder.rs
recursion/core/src/cpu/: air.rs
recursion/core/src/cpu/columns/: alu.rs  mod.rs  opcode.rs
recursion/core/src/memory/: columns.rs  mod.rs
recursion/core/src/poseidon2/: columns.rs  external.rs  mod.rs  trace.rs
recursion/core/src/poseidon2_wide/: external.rs
recursion/core/src/runtime/: mod.rs
recursion/core/src/stark/: config.rs  mod.rs
recursion/program/src/: challenger.rs  hints.rs  reduce.rs  stark.rs  types.rs
recursion/program/src/fri/: domain.rs  mod.rs  two_adic_pcs.rs  types.rs
recursion/verifier/: Cargo.toml
recursion/verifier/src/: commit.rs  constraints.rs  lib.rs  stark.rs  types.rs
recursion/verifier/src/fri/: domain.rs  two_adic_pcs.rs
recursion/wrapper/: Cargo.toml
recursion/wrapper/src/: lib.rs
tests/blake3-compress/elf/: riscv32im-succinct-zkvm-elf
tests/blake3-compress/src/: main.rs
tests/keccak-permute/elf/: riscv32im-succinct-zkvm-elf
tests/keccak-permute/src/: main.rs
tests/secp256k1-double/elf/: riscv32im-succinct-zkvm-elf
tests/secp256k1-double/src/: main.rs
zkvm/: Cargo.toml
zkvm/entrypoint/src/syscalls/: halt.rs
zkvm/precompiles/: Cargo.toml
zkvm/precompiles/src/: io.rs  lib.rs
zkvm/precompiles/src/serde/: deserializer.rs  err.rs  mod.rs  serializer.rs
zkvm/src/: io.rs  lib.rs  syscall.rs  unconstrained.rs
