[package]
name = "sha2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
sha2 = { git = "https://github.com/succinctbot/RustCrypto-hashes.git" }
succinct-zkvm = { path = "../../zkvm" }
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = "4.3.24"
