[workspace]
[package]
version = "0.1.0"
name = "babybear-add-zkvm"
edition = "2021"

[dependencies]
succinct-zkvm = { git= "https://github.com/succinctlabs/vm.git", branch="kevjue/recursive_verifier_profiler" }
p3-baby-bear = { git = "ssh://git@github.com/succinctlabs/plonky3.git", branch="kevjue/rand_feature" }
p3-field = { git = "ssh://git@github.com/succinctlabs/plonky3.git", branch="kevjue/rand_feature" }