[workspace]
[package]
version = "0.1.0"
name = "verifier-zkvm"
edition = "2021"


[dependencies]
log = "0.4.20"
p3-commit = { git = "ssh://git@github.com/succinctlabs/plonky3.git", branch="kevjue/rand_feature" }
p3-field = { git = "ssh://git@github.com/succinctlabs/plonky3.git", branch="kevjue/rand_feature" }
p3-matrix = { git = "ssh://git@github.com/succinctlabs/plonky3.git", branch="kevjue/rand_feature" }
succinct-core = { git = "https://github.com/succinctlabs/vm.git", branch="kevjue/recursive_verifier_profiler" }
succinct-derive = { git = "https://github.com/succinctlabs/vm.git", branch="kevjue/recursive_verifier_profiler" }
succinct-zkvm = { git = "https://github.com/succinctlabs/vm.git", branch="kevjue/recursive_verifier_profiler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"