[package]
name = "sp1-precompiles"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
amcl = { package = "snowbridge-amcl", version = "1.0.2", default-features = false, features = ["bls381"] }
k256 = { version = "0.13.3", features = ["ecdsa", "std", "bits"] }

# Serialization
bincode = "1.3.3"
serde = { version = "1.0.201", features = ["derive"] }
hex = "0.4.3"

# Randomness
getrandom = { version = "0.2.14", features = ["custom"] }
rand = "0.8.5"

# Utilities
anyhow = "1.0.83"
cfg-if = "1.0.0"
num = { version = "0.4.3" }

[features]
# Feature flags
verify = []
