[workspace]
[package]
version = "0.1.0"
name = "book-script"
edition = "2021"

[dependencies]
sp1-sdk = { path = "../../../sdk" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
bincode = "1.3.3"
serde_cbor = "0.11.2"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
