[workspace]
[package]
version = "0.1.0"
name = "verifier-program"
edition = "2021"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "kevjue/rv_precompiles_and_rm_reduces" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", branch = "kevjue/rv_precompiles_and_rm_reduces" }

[[bin]]
name = "verifier"
path = "src/verifier.rs"